# QtNixMon

./: .gitignore  CMakeLists.txt  LICENSE  README.md  monitor.cpp  monitor.h  monitor.ui
resources/: resources.qrc
src/: main.cpp
src/config/: configmanager.cpp  configmanager.cppm  configmanager.h
src/core/: cpuinfo.cpp  cpuinfo.cppm  cpuinfo.h  meminfo.cpp  meminfo.cppm  meminfo.h  systemmonitor.cpp  systemmonitor.cppm  systemmonitor.h
src/ui/: mainwindow.cpp  mainwindow.h  settingdialog.cpp  settingdialog.h  settingdialog.ui  settingsdialog.cpp  settingsdialog.h  settingsdialog.ui
